[gd_scene load_steps=40 format=2]

[ext_resource path="res://HUD's/Styles/Button_Text.tres" type="DynamicFont" id=2]
[ext_resource path="res://HUD's/HUD_Scripts/Main_Perfil.gd" type="Script" id=3]
[ext_resource path="res://HUD's/HUD_Scripts/Main_Menu.gd" type="Script" id=4]
[ext_resource path="res://Images/HUD/1491313935-pause_829891.png" type="Texture" id=5]
[ext_resource path="res://Images/HUD/jogo-de-búzios.png" type="Texture" id=6]
[ext_resource path="res://HUD's/HUD_Scripts/Main_Som.gd" type="Script" id=7]
[ext_resource path="res://HUD's/HUD_Scripts/Main_PáginaInicial.gd" type="Script" id=8]
[ext_resource path="res://HUD's/HUD_Scripts/Main_LivroDeReceitas.gd" type="Script" id=9]
[ext_resource path="res://Images/HUD/wood2.png" type="Texture" id=10]
[ext_resource path="res://Images/HUD/level_round.png" type="Texture" id=11]
[ext_resource path="res://Images/HUD/next_arrow_14440.png" type="Texture" id=12]
[ext_resource path="res://Images/HUD/level-up.png" type="Texture" id=13]
[ext_resource path="res://Images/HUD/stars.png" type="Texture" id=14]
[ext_resource path="res://Images/HUD/1491313935-pause_82989.png" type="Texture" id=15]
[ext_resource path="res://Images/HUD/next_arrow_14441.png" type="Texture" id=16]
[ext_resource path="res://Images/HUD/perfil_ayo.png" type="Texture" id=17]
[ext_resource path="res://Images/HUD/circle.png" type="Texture" id=18]
[ext_resource path="res://Images/HUD/rounded1.png" type="Texture" id=19]
[ext_resource path="res://Images/HUD/rounded2.png" type="Texture" id=20]
[ext_resource path="res://HUD's/Styles/Fonte_Buzios.tres" type="DynamicFont" id=21]
[ext_resource path="res://Images/HUD/livro receitas fechado2(512×512).png" type="Texture" id=22]
[ext_resource path="res://Images/HUD/despensa 2 (512×512).png" type="Texture" id=23]
[ext_resource path="res://Images/HUD/circle2.png" type="Texture" id=24]
[ext_resource path="res://Images/HUD/Obj7.png" type="Texture" id=25]
[ext_resource path="res://HUD's/Styles/Fonte_Caixas_de_Dialogo.tres" type="DynamicFont" id=26]
[ext_resource path="res://Images/HUD/x1.png" type="Texture" id=27]
[ext_resource path="res://Images/HUD/caixa_de_dialogo.png" type="Texture" id=28]
[ext_resource path="res://Images/HUD/caixa_de_dialogo_curta.png" type="Texture" id=29]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="HUD_Main" type="CanvasLayer"]

[node name="Pausa" type="TextureRect" parent="."]
margin_left = 1096.0
margin_top = 25.0
margin_right = 1473.0
margin_bottom = 110.0
rect_scale = Vector2( 0.665964, 0.665964 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Pause" type="Button" parent="."]
show_behind_parent = true
light_mask = 0
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.9999
margin_top = 22.0
margin_right = 540.0
margin_bottom = 540.0
rect_scale = Vector2( 0.112081, 0.108166 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 15 )
flat = true
align = 2

[node name="Bordas_Stats_Shadows" type="TextureRect" parent="."]
margin_left = -98.0
margin_top = 9.0
margin_right = 279.0
margin_bottom = 94.0
rect_scale = Vector2( 1.30783, 1.30783 )
texture = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="Bordas_Stats" type="TextureRect" parent="."]
margin_left = -99.0
margin_top = 5.0
margin_right = 278.0
margin_bottom = 90.0
rect_scale = Vector2( 1.30783, 1.30783 )
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Circle_Perfil_Shadow" type="TextureRect" parent="."]
margin_left = 944.0
margin_top = 588.0
margin_right = 1321.0
margin_bottom = 673.0
rect_scale = Vector2( 1.38316, 1.38316 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="Circle_Perfil" type="TextureRect" parent="."]
margin_left = 940.0
margin_top = 585.0
margin_right = 1317.0
margin_bottom = 670.0
rect_scale = Vector2( 1.38316, 1.38316 )
texture = ExtResource( 24 )
expand = true
stretch_mode = 6

[node name="Nivel" type="TextureRect" parent="."]
margin_left = 27.0
margin_top = 28.0
margin_right = 94.0
margin_bottom = 93.0
texture = ExtResource( 13 )
expand = true

[node name="Nivel_Barra" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 9.0
margin_right = 95.0
margin_bottom = 96.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 11 )
expand = true

[node name="Búzios" type="TextureRect" parent="."]
margin_left = 214.0
margin_top = 65.0
margin_right = 250.0
margin_bottom = 101.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 6 )
expand = true

[node name="Estrelas" type="TextureRect" parent="."]
margin_left = 115.0
margin_top = 24.0
margin_right = 296.0
margin_bottom = 54.0
rect_scale = Vector2( 0.900731, 0.900731 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="Dinheiro" type="Label" parent="."]
margin_left = 117.0
margin_top = 73.0
margin_right = 645.0
margin_bottom = 292.0
rect_scale = Vector2( 0.172703, 0.155546 )
custom_colors/font_color = Color( 0.203922, 0.145098, 0.368627, 1 )
custom_fonts/font = ExtResource( 21 )
text = "$$$$"

[node name="TempoPedidos" type="Control" parent="."]
anchor_left = 0.539
anchor_right = 0.539
margin_left = -343.92
margin_right = 343.08
margin_bottom = 103.0

[node name="TextureRect" type="TextureRect" parent="TempoPedidos"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.5
margin_top = -65.0
margin_right = 179.5
margin_bottom = 199.0
rect_rotation = -0.433602
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Esquerda" type="Button" parent="TempoPedidos"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 67.0
margin_top = -16.5
margin_right = 335.0
margin_bottom = 245.5
rect_scale = Vector2( 0.230821, 0.230821 )
icon = ExtResource( 16 )
flat = true

[node name="Direita" type="Button" parent="TempoPedidos"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -19.5
margin_right = 51.0001
margin_bottom = 242.5
rect_scale = Vector2( 0.229748, 0.229748 )
icon = ExtResource( 12 )
flat = true

[node name="Rounded6" type="TextureRect" parent="TempoPedidos"]
margin_left = 129.0
margin_top = -13.0
margin_right = 506.0
margin_bottom = 72.0
rect_scale = Vector2( 0.901839, 0.901839 )
texture = ExtResource( 25 )
expand = true
stretch_mode = 6

[node name="Press_pause" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -360.0
margin_right = 203.0
margin_bottom = 360.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Press_pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -234.5
margin_right = 201.5
margin_bottom = 234.5
texture = ExtResource( 29 )
expand = true
stretch_mode = 6

[node name="Configuracoes" type="Button" parent="Press_pause/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -32.0
margin_right = 197.0
margin_bottom = 28.0
rect_scale = Vector2( 0.924, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Configurações"

[node name="Exit" type="Button" parent="Press_pause/TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.5
margin_top = 154.5
margin_right = 479.5
margin_bottom = 672.5
rect_scale = Vector2( 0.072, 0.073 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 27 )
flat = true

[node name="Receita" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -120.0
margin_right = 596.0
margin_bottom = 398.0
rect_scale = Vector2( 0.190792, 0.180825 )
text = "Receitas"
icon = ExtResource( 22 )
flat = true

[node name="Estoque" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 132.0
margin_top = -119.0
margin_right = 716.0
margin_bottom = 399.0
rect_scale = Vector2( 0.171985, 0.181271 )
text = "Estoques"
icon = ExtResource( 23 )
flat = true

[node name="Perfil" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -134.0
margin_top = -130.0
margin_right = 155.0
margin_bottom = 132.0
rect_scale = Vector2( 0.41, 0.41 )
icon = ExtResource( 17 )
flat = true

[node name="TelaPerfil" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -342.0
margin_right = 207.0
margin_bottom = 342.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="TelaPerfil"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.5
margin_top = -216.0
margin_right = 199.5
margin_bottom = 244.0
texture = ExtResource( 28 )
expand = true

[node name="Som" type="Button" parent="TelaPerfil/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -117.5
margin_right = 85.0
margin_bottom = -57.5
rect_pivot_offset = Vector2( -522, -86.5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Som"

[node name="Tutorial" type="Button" parent="TelaPerfil/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -31.5
margin_right = 95.0
margin_bottom = 28.5
rect_pivot_offset = Vector2( -522, -172.5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Tutorial"

[node name="Sair" type="Button" parent="TelaPerfil/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = 56.0
margin_right = 158.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( -522, -172.5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Sair"

[node name="Exit" type="Button" parent="TelaPerfil/TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_right = 474.0
margin_bottom = 518.0
rect_scale = Vector2( 0.0849426, 0.0849426 )
icon = ExtResource( 27 )
flat = true

[node name="Som" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -360.0
margin_right = 203.0
margin_bottom = 360.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="Som"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -122.0
margin_right = 169.0
margin_bottom = 122.0
texture = ExtResource( 28 )
expand = true

[node name="DestivaSom" type="Button" parent="Som/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -30.0
margin_right = 89.5
margin_bottom = 30.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Som"

[node name="Exit" type="Button" parent="Som/TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.0
margin_top = -4.0
margin_right = 471.0
margin_bottom = 514.0
rect_scale = Vector2( 0.0912287, 0.0912287 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 27 )
flat = true

[node name="PáginaInicial" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -360.0
margin_right = 203.0
margin_bottom = 360.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="PáginaInicial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -154.0
margin_right = 169.0
margin_bottom = 16.0
texture = ExtResource( 29 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="PáginaInicial/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -139.5
margin_top = 16.0
margin_right = 607.5
margin_bottom = 297.0
rect_scale = Vector2( 0.362795, 0.362795 )
custom_fonts/font = ExtResource( 26 )
text = "Tem certeza que deseja sair?"
align = 1
valign = 1

[node name="Sair" type="Button" parent="PáginaInicial/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.5
margin_top = -83.0
margin_right = 81.5
margin_bottom = -23.0
rect_scale = Vector2( 0.396565, 0.396565 )
custom_fonts/font = ExtResource( 26 )
custom_styles/normal = SubResource( 11 )
text = "Sair"

[node name="Exit" type="Button" parent="PáginaInicial/TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -38.0
margin_top = 19.0
margin_right = 564.0
margin_bottom = 537.0
rect_scale = Vector2( 0.063439, 0.063439 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 27 )
flat = true

[node name="LivroDeReceitas" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -223.0
margin_right = 692.0
margin_bottom = 498.0
rect_scale = Vector2( 0.623, 0.638 )
script = ExtResource( 9 )

[node name="ReceitaAcaraje" type="TextureRect" parent="LivroDeReceitas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -282.0
margin_right = 488.0
margin_bottom = 282.0
texture = ExtResource( 29 )
expand = true
stretch_mode = 6

[node name="Exit" type="Button" parent="LivroDeReceitas/ReceitaAcaraje"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_top = 94.0
margin_right = 457.0
margin_bottom = 612.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 27 )
flat = true

[node name="Avançar" type="Button" parent="LivroDeReceitas/ReceitaAcaraje"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -39.0
margin_right = 214.0
margin_bottom = 223.0
rect_scale = Vector2( 0.25, 0.25 )
text = ">"
icon = ExtResource( 12 )
flat = true

[node name="Voltar" type="Button" parent="LivroDeReceitas/ReceitaAcaraje"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -38.0
margin_right = 268.0
margin_bottom = 224.0
rect_scale = Vector2( 0.25, 0.25 )
text = "<"
icon = ExtResource( 16 )
flat = true

[connection signal="pressed" from="Pause" to="Press_pause" method="_on_Pause_pressed"]
[connection signal="pressed" from="Press_pause/TextureRect/Exit" to="Press_pause" method="_on_Exit_pressed"]
[connection signal="pressed" from="Receita" to="LivroDeReceitas" method="_on_Receita_pressed"]
[connection signal="pressed" from="Perfil" to="TelaPerfil" method="_on_Perfil_pressed"]
[connection signal="pressed" from="TelaPerfil/TextureRect/Som" to="Som" method="_on_Som_pressed"]
[connection signal="pressed" from="TelaPerfil/TextureRect/Sair" to="PáginaInicial" method="_on_PaginaInicial_pressed"]
[connection signal="pressed" from="TelaPerfil/TextureRect/Exit" to="TelaPerfil" method="_on_Exit_pressed"]
[connection signal="pressed" from="Som/TextureRect/Exit" to="Som" method="_on_Exit_pressed"]
[connection signal="pressed" from="PáginaInicial/TextureRect/Sair" to="PáginaInicial" method="_on_SairPaginainicial_pressed"]
[connection signal="pressed" from="PáginaInicial/TextureRect/Exit" to="PáginaInicial" method="_on_Exit_pressed"]
[connection signal="pressed" from="LivroDeReceitas/ReceitaAcaraje/Exit" to="LivroDeReceitas" method="_on_Exit_pressed"]
